--- a/Dockerfile.npc
+++ b/Dockerfile.npc
@@ -1,9 +1,10 @@
 FROM golang:1.22 AS builder
-ARG GOPROXY=direct
+ARG LDFLAGS
+ENV GOPROXY=https://goproxy.cn,direct
 WORKDIR /go/src/ehang.io/nps
 COPY . .
 RUN go get -d -v ./...
-RUN CGO_ENABLED=0 go build -ldflags="-w -s -extldflags -static" ./cmd/npc/npc.go
+RUN CGO_ENABLED=0 go build -ldflags="-w -s -extldflags -static ${LDFLAGS}" ./cmd/npc/npc.go
 RUN mkdir tmp
 
 FROM scratch
