--- a/Dockerfile.nps
+++ b/Dockerfile.nps
@@ -1,14 +1,16 @@
 FROM golang:1.22 AS builder
-ARG GOPROXY=direct
+ARG LDFLAGS
+ENV GOPROXY=https://goproxy.cn,direct
 WORKDIR /go/src/ehang.io/nps
 COPY . .
 RUN go get -d -v ./...
-RUN CGO_ENABLED=0 go build -ldflags="-w -s -extldflags -static" ./cmd/nps/nps.go
+RUN CGO_ENABLED=0 go build -ldflags="-w -s -extldflags -static ${LDFLAGS}" ./cmd/nps/nps.go
 RUN mkdir tmp
 
 FROM scratch
 COPY --from=builder /go/src/ehang.io/nps/nps /
 COPY --from=builder /go/src/ehang.io/nps/web /web
 COPY --from=builder /go/src/ehang.io/nps/tmp /tmp
+COPY --from=builder /go/src/ehang.io/nps/conf /conf
 VOLUME /conf
 CMD ["/nps", "service"]
